--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/icon.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -24,11 +24,28 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Innovation Garage</title>
+    <style>
+      
+    </style>
   </head>
   <body>
+    <!-- <div class="sample">ienlhff4h4fh4ufh3fnpnp2kdmxnjhrbfyu5hioj2qsgaggiuoieup94ifv;n</div> -->
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <div id="childs"></div>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <div id="footer"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
